fixed more comments
